# py-json-compressor

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: automerge.yml  codeql.yml  linting.yml  test.yml
src/: json_compressor.py
tests/: test_json_compressor.py
